fixes suggested by reviewers made

--- a/On_The_Dynamics_Of_The_Gravitational_Field_And_Higher_Order_Field_Equations.bib
+++ b/On_The_Dynamics_Of_The_Gravitational_Field_And_Higher_Order_Field_Equations.bib
@@ -652,3 +652,87 @@
   pages = {721},
   year = {2006}
 }
+
+@article{poplawski_2014,
+  author = {Poplawski, Nikodem},
+  journal = {Gen Relativ Gravit},
+  number = {1625},
+  title = {Affine theory of gravitation},
+  volume = {46},
+  year = {2014}
+}
+
+@article{capozziello_2009,
+   title={A GENERAL SOLUTION IN THE NEWTONIAN LIMIT OF f(R)-GRAVITY},
+   volume={24},
+   ISSN={1793-6632},
+   url={http://dx.doi.org/10.1142/S0217732309030382},
+   DOI={10.1142/s0217732309030382},
+   number={09},
+   journal={Modern Physics Letters A},
+   publisher={World Scientific Pub Co Pte Lt},
+   author={CAPOZZIELLO, S. and STABILE, A. and TROISI, A.},
+   year={2009},
+   month=mar, pages={659–665}
+}
+
+@misc{hurtado_2025,
+      title={Spherically Symmetric Potentials in Quadratic $f(R)$ Gravity}, 
+      author={Roger Anderson Hurtado},
+      year={2025},
+      eprint={2506.15123},
+      archivePrefix={arXiv},
+      primaryClass={gr-qc},
+      url={https://arxiv.org/abs/2506.15123}, 
+}
+
+@article{liu_2017,
+   title={Distinguishing f(R) theories from general relativity by gravitational lensing effect},
+   volume={77},
+   ISSN={1434-6052},
+   url={http://dx.doi.org/10.1140/epjc/s10052-017-5308-5},
+   DOI={10.1140/epjc/s10052-017-5308-5},
+   number={11},
+   journal={The European Physical Journal C},
+   publisher={Springer Science and Business Media LLC},
+   author={Liu, Hongguang and Wang, Xin and Li, Haida and Ma, Yongge},
+   year={2017},
+   month=oct
+}
+
+@article{dagostino_2024,
+  author = {D’Agostino, R. and Jusufi, K. and Capozziello, S.},
+  journal = {Eur. Phys. J. C},
+  number = {386},
+  title = {Testing Yukawa cosmology at the Milky Way and M31 galactic scales},
+  volume = {84},
+  year = {2024}
+}
+
+@article{capozziello_2020,
+    author = "Capozziello, Salvatore and Jovanovi{\'c}, Vesna Borka and Borka, Du{\v{s}}ko and Jovanovi{\'c}, Predrag",
+    title = "{Constraining theories of gravity by fundamental plane of elliptical galaxies}",
+    eprint = "2004.11557",
+    archivePrefix = "arXiv",
+    primaryClass = "gr-qc",
+    doi = "10.1016/j.dark.2020.100573",
+    journal = "Phys. Dark Univ.",
+    volume = "29",
+    pages = "100573",
+    year = "2020"
+}
+
+@article{stabile_2013,
+  title = {Galaxy rotation curves in $f(R,\ensuremath{\phi})$ gravity},
+  author = {Stabile, A. and Capozziello, S.},
+  journal = {Phys. Rev. D},
+  volume = {87},
+  issue = {6},
+  pages = {064002},
+  numpages = {13},
+  year = {2013},
+  month = {Mar},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.87.064002},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.87.064002}
+}
